--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: auto;
-    font-family: Arial, sans-serif;
+    font-family: "Comic Sans MS", cursive, sans-serif;
     background-color: #f1ed97;
     scroll-behavior: smooth;
     position: relative;
@@ -224,9 +224,9 @@ html, body {
     color: #f1ed97;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
     .navbar-toggle {
-        display: block;
+        display: none;
     }
 
     .navbar-menu {
