--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: auto;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Congenial", cursive, sans-serif;
     background-color: #f1ed97;
     scroll-behavior: smooth;
     position: relative;
