Aktualisieren von style.css

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ html, body {
     color: #fcfbea;
     padding: 3rem 2rem;
     font-size: 1rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Congenial', Tahoma, Geneva, Verdana, sans-serif;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
 }
 
